# bcic-client-api

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: quality.yml
_bmad-output/implementation-artifacts/: 1-1-initialize-the-installable-python-package.md  1-2-configure-the-client-explicitly-and-from-the-environment.md  1-3-expose-stable-domain-endpoint-properties.md  1-4-establish-common-typed-model-foundations.md  2-1-build-the-rest-v1-transport-and-json-parser.md  2-2-authenticate-and-attach-session-credentials.md  2-3-manage-logout-and-client-lifecycle.md  2-4-map-failures-and-apply-retry-policy.md  2-5-execute-controlled-generic-rest-v1-methods.md  3-1-retrieve-a-single-record.md  3-2-retrieve-and-search-paged-records.md  3-3-traverse-all-record-pages-safely.md  3-4-create-records.md  3-5-update-records.md  3-6-delete-records.md  4-1-retrieve-roles.md  4-2-retrieve-role-and-user-permissions.md  4-3-retrieve-binary-data.md  4-4-upload-binary-data.md  4-5-enforce-safe-operational-logging.md  5-1-establish-mockable-unit-test-infrastructure.md  5-2-cover-public-sdk-behavior.md  5-3-enforce-automated-quality-gates.md  5-4-publish-consumer-documentation.md  sprint-status.yaml  (+2 more)
bcic/: __init__.py  _deprecation.py  auth.py  client.py  config.py  exceptions.py  pagination.py  transport.py
docs/: api-reference.md  authentication.md  contributing.md  errors.md  index.md  installation.md  pagination.md  quick-start.md  releasing.md  testing.md  versioning.md
examples/: authentication.py  binary.py  error_handling.py  pagination.py  permissions.py  records.py
(+43 files in other folders)
