[project]
name = "bcic-client-api"
version = "0.1.0"
description = "Python client SDK for the BCIC API"
license = "MIT"
requires-python = ">=3.12,<4.0"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2,<3",
    "tenacity>=8,<10",
]

[tool.poetry]
packages = [{ include = "bcic" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"
ruff = ">=0.12,<1"
mypy = ">=1.16,<2"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["bcic"]

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"
